--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,6 @@
         <link href="/build/app.css" rel="stylesheet" />
     </head>
     <body>
-        <app-scene></app-scene>
+        <gd-globe></gd-globe>
     </body>
 </html>
