Plot satellites using first position

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,23 @@
         <link href="/build/app.css" rel="stylesheet" />
     </head>
     <body>
-        <gd-globe />
+        <gd-globe>
+            <gd-satellite
+                norad-id="23940"
+                name="TOMS EP"
+            />
+            <gd-satellite
+                norad-id="41783"
+                name="TOMS EP"
+            />
+            <gd-satellite
+                norad-id="40012"
+                name="TOMS EP"
+            />
+            <gd-satellite
+                norad-id="43613"
+                name="IceSat 2"
+            />
+        </gd-globe>
     </body>
 </html>
